[tool.poetry]
name = "synapse-purge"
version = "2.3.0"
description = "A script to purge content from Synapse servers"
authors = ["Chris Braun <cryzed@googlemail.com>", "imtbl <imtbl@mser.at>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
postgres = "^3.0.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
